nixidy/generated/prod/lidarr/Deployment-lidarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: lidarr
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: media
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: lidarr
      app.kubernetes.io/instance: lidarr
      app.kubernetes.io/name: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 8ed17a10683eb387726ea88fd1f688fc173c0ab31b3529a9a65b11b1aa5247ee
      labels:
        app.kubernetes.io/controller: lidarr
        app.kubernetes.io/instance: lidarr
        app.kubernetes.io/name: lidarr
    spec:
      automountServiceAccountToken: false
      containers:
        - envFrom:
            - secretRef:
                name: lidarr
            - configMapRef:
                name: lidarr
          image: ghcr.io/home-operations/lidarr:3.1.2.4902@sha256:dab0e07502a34436fc50c3e789388f0a29f8cbf681fb7a02ed703ad7c368a22c
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          name: lidarr
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 80
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /media/downloads
              name: media-downloads
            - mountPath: /media/music
              name: media-music
            - mountPath: /tmp
              name: tmpfs
              subPath: tmp
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 65534
        runAsUser: 65534
      serviceAccountName: lidarr
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
        - name: media-music
          persistentVolumeClaim:
            claimName: media-music
        - emptyDir: {}
          name: tmpfs
