nixidy/generated/prod/lidarr/HTTPRoute-lidarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: lidarr
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: lidarr
  name: lidarr
  namespace: media
spec:
  hostnames:
    - lidarr.trdos.me
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          namespace: identity
          port: 4180
          weight: 1
